--- a/connections/proxy/.choreo/component.yaml
+++ b/connections/proxy/.choreo/component.yaml
@@ -1,3 +1,7 @@
+# +required The configuration file schema version
+schemaVersion: 1.2
+
+
 dependencies:
     connectionReferences:
     - name: Testing
